方块行为API重构